<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CategoriasActivity"
    android:orientation="vertical">
    <TextView
        android:id="@+id/categoriasTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/select_chat"
        android:textAlignment="center"
        android:layout_marginTop="20dp"
        android:textColor="@color/colorPrimaryDark"
        />
    <Button
        android:onClick="entrarChatCinema"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:background="@color/colorAccent"
        android:text="@string/cinema"/>
    <Button
        android:onClick="entrarChatNovidades"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:background="@color/colorAccent"
        android:text="@string/novidades"/>
    <Button
        android:onClick="entrarChatTecnologia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:background="@color/colorAccent"
        android:text="@string/tecnologia"/>
    <Button
        android:onClick="entrarChatEconomia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:background="@color/colorAccent"
        android:text="@string/economia"/>
    <Button
        android:onClick="irParaLogin"
        android:layout_gravity="end"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="25dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/voltar_para_login"
        android:background="@android:color/white"/>
</LinearLayout>